plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'me.champeau.jmh' version '0.7.2'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

ext['testcontainers.version'] = '2.0.5'

java {
     toolchain {
        languageVersion = JavaLanguageVersion.of(21)
        vendor = JvmVendorSpec.ADOPTIUM
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

allprojects {
    repositories {
        maven { url 'https://jitpack.io' }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    compileOnly 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2'
    testImplementation enforcedPlatform('org.testcontainers:testcontainers-bom:2.0.5')
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.5'
    testImplementation 'org.testcontainers:testcontainers-mysql:2.0.5'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'

    implementation 'net.nurigo:sdk:4.3.0'

    implementation 'org.web3j:core:5.0.0'

    implementation("org.springframework.boot:spring-boot-starter-security:3.4.4")
    implementation("com.mysql:mysql-connector-j:9.2.0")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.4.4")

    implementation("com.auth0:java-jwt:2.0.1")
    implementation("io.jsonwebtoken:jjwt:0.12.6")
    implementation("org.springframework.boot:spring-boot-starter-data-redis:3.4.4")

    implementation("commons-io:commons-io:2.19.0")

    // Monitoring
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'net.javacrumbs.shedlock:shedlock-spring:5.13.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.13.0'

    // Swagger (OpenAPI)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
}

tasks.named('test') {
    useJUnitPlatform()

    // .env 파일의 환경변수를 테스트 실행 시 주입
    def envFile = file('.env')
    if (envFile.exists()) {
        envFile.readLines().each { line ->
            if (line.trim() != "" && !line.startsWith("#")) {
                def parts = line.split('=', 2)
                if (parts.length == 2) {
                    environment parts[0].trim(), parts[1].trim()
                }
            }
        }
    }
}

tasks.named('jmhJar') {
    zip64 = true
}
